Fixed text alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 #main{
+    display:flex;
     background-color: hsl(213, 19%, 18%);
     border-radius: 30px;
     min-height: 390px;
@@ -34,6 +35,7 @@ body {
     padding: 2rem 2rem;
     padding-bottom: 1.5rem;
 }
+
 
 #card-thankyou{
     display: flex;
@@ -119,8 +121,16 @@ input[value="SUBMIT"]:active{
     width: 80%;
     height: 2.4em;
     margin-top: 20px;
+    align-self: center;
     border-style: none;
     border-radius: 1.5rem;
     background-color: hsl(213, 19%, 25%);
+}
+
+#feedback-display p{
+    display: inline-block;
+    font-size: 1em;
+    vertical-align: middle;
+    margin: 0.6em;
     color:hsl(25, 97%, 53%);
 }
